fixed lack of overflow on a3 a4 buttons

--- a/src/app/components/Act3/act3Animation.css
+++ b/src/app/components/Act3/act3Animation.css
@@ -6,6 +6,10 @@
     overflow: visible;
 }
 
+.rowGridContent{
+    overflow: visible;
+}
+
 .a3-gradient-v0 {
   height:100%;
 }
