--- a/src/app/components/Act4/act4Animation.css
+++ b/src/app/components/Act4/act4Animation.css
@@ -1,3 +1,7 @@
+.rowGridContent{
+    overflow: visible;
+}
+
 .a4-gradient-v0 {
   height:100%;
 }
