--- a/src/app/components/Landing/LandingAnimation.css
+++ b/src/app/components/Landing/LandingAnimation.css
@@ -45,6 +45,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  pointer-events: auto;
 }
 .ticketbuttoncontent{
   padding-left:1em;
